# Symptosay

./: .env.example  .gitignore  README.md  docker-compose.yml  ruff.toml
database_service/: Dockerfile  alembic.ini  alembic_symptoms.ini  alembic_user_symptoms.ini  alembic_users.ini  create_tables.py  crud.py  database.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml  symptoms_models.py  user_models.py  user_symptoms_models.py
database_service/alembic/: 000000000000_initial.py  env.py  script.py.mako
database_service/alembic/versions/: 0a0613b31ff9_initial_migration_for_db_symptoms.py  1f99997370cd_add_new_out_model.py  43de484ec9da_migration_for_symptoms.py  57ac8defe8c7_create_alembic_symptoms_table.py  729c64e0ea4a_initial_migration_for_db_symptoms.py  8205f63643ed_remove_fk_from_user_symptoms.py  8850f928edf3_initial_migration_for_db_symptoms.py  a14c8285b2b4_initial.py  bc68eb722fb0_initial.py  bce5cb1d0a53_changed_symptoms_diseases.py
database_service/app/: database.py  logging_config.py  main.py
database_service/app/api/: diseases.py  symptoms.py  (+1 more)
database_service/migrations/: env.py
symptosay/: Dockerfile  main.py  pyproject.toml  requirements.txt
symptosay/filters/: admin_filter.py
symptosay/handlers/: admin_handler.py  main_handler.py  start_handler.py  user_handler.py
symptosay/keyboards/: admin_kb.py  main_kb.py  main_keyboard.py  start_keyboard.py  user_kb.py
symptosay/middlewares/: user_middleware.py
symptosay/services/: adm_user_service.py  connection.py  db_service.py  state.py  user_service.py
(+26 files in other folders)
