[project]
name = "symptosay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
]

[tool.basedpyright]
reportUnusedCallResult = false
reportAny = false
